0.11 (2006-01-06):
==================

* Reset throttle only when we successfully handshake or submit, so that
  we actually back off exponentially.

* Set the default timeout for socket in an attempt to make urllib behave
  nicer. I believe this does not work under 2.4, but it's something.

* If there are multiple writers waiting (for example, upon startup or
  after a long network timeout), read from all of them and wait until
  there is nothing left before submitting.

0.10 (2006-01-04):
==================

* Added setup.py and install.sh so that installation should be
  relatively painless. setup.py does the actual installing; install.sh
  merely sets up users and permissions.

* Improve the handling of an empty or nonexistent cache.

0.9 (2006-01-03):
=================

* Some small fixes in how we handle rejected submissions and other
  FAILED responses.

* Make log messages more user-friendly and less redundant if debugging
  is off.

0.8 (2006-01-02):
=================

* Brown paper bag fix: submit the oldest cached subs first, not the
  newest. Yikes!

0.7 (2006-01-02):
=================

* Redesign the main loop so that we can increase the network backoff
  exponentially without forcing lastfmsubmit to block until we succeed.
  Instead, just sleep for 15 seconds or so at a time and check if we're
  ready to try the network again. This will keep the fifo from clogging
  up, so we can read it only once per loop without worrying about
  falling behind.

* Don't log debugging information by default. If you want to turn it on,
  use --debug.

0.6 (2006-01-01):
=================

* Lock the fifo, with PATH_TO_FIFO.lock. Any program that needs to write
  to the fifo must use this.

* Catch SIGTERM and clean up/save the cache properly.

0.5 (2005-12-31):
=================

* Improve handling of untagged songs in lastmp.

* Catch handshake errors properly and back off until we can connect.

0.4 (2005-12-14):
=================
