@@ -1,3 +1,5 @@
+* In install.sh, set up directory permissions and run setup.py.
+
 0.11 (2006-01-06):
 ==================
 
